# hero-time

./: .gitignore  README.md  pyproject.toml  readme.md
configs/: default.yaml
docs/: architecture.md  manjaro_setup.md
prompts/: rerank_prompt.txt
src/: __init__.py  cli.py  config.py  logging_config.py  models.py  pipeline_candidate_builder.py
src/features/: asr.py  audio_events.py  diarization.py  video_motion.py
src/ingest/: __init__.py  extract_audio.py  probe.py
src/propose/: __init__.py  exporter.py  segment_builder.py
src/scoring/: __init__.py  fuse.py  heuristic_score.py  llm_rerank.py
tests/: test_audio_events.py  test_cli_error_handling.py  test_cli_pipeline_run.py  test_diarization_device.py  test_exporter.py  test_llm_rerank.py  test_pipeline_candidate_builder.py  test_probe.py  test_scoring.py  test_video_motion_utils.py
